# Riddles

./: README.md  Sebelum download Subscribe dulu gaes.txt  meson.build
src/: main.py  meson.build  riddles.in
src/Extras/: algoritma.py  banner.py  sevenzippy.py  z_riddles.py
src/Extras/color/: warna.py
src/color/: warna.py
src/word/: wordlist.txt
